# ownmon

./: API.md  BUILD_RELEASE.md  Cargo.toml  README.md  RELEASE.md
.github/workflows/: ci.yml  release.yml  security.yml
instruction/: main.md
src/: database.rs  lib.rs  main.rs  media.rs
src/crypto/: keys.rs  merkle.rs  mod.rs  signing.rs
src/monitor/: input_hooks.rs  mod.rs  window_poller.rs
src/server/: mod.rs  state.rs  ws.rs
src/server/routes/: categories.rs  config.rs  health.rs  media.rs  mod.rs  sessions.rs  stats.rs
src/store/: activity_store.rs  aggregator.rs  mod.rs  types.rs
src/tray/: icon.rs  menu.rs  mod.rs
src/winapi_utils/: hooks.rs  message_loop.rs  mod.rs  process.rs  window.rs
