[package]
name = "ownmon"
version = "0.1.0-beta.2"
edition = "2021"

# Optimize for size in release builds
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[dependencies]
# === Windows API ===
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_UI_Input_KeyboardAndMouse",
    # Media Control (WinRT)
    "Media_Control",
    "Foundation",
]}

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Date/Time ===
chrono = { version = "0.4", features = ["serde"] }

# === Lazy Initialization ===
once_cell = "1.19"

# === Logging ===
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# === Signal Handling ===
ctrlc = "3.4"

# === System Tray ===
tray-icon = "0.19"

# === Database ===
rusqlite = { version = "0.32", features = ["bundled"] }

# === Directories ===
dirs = "5.0"

# === HTTP Server ===
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.5", features = ["cors"] }
futures = "0.3"


